@@ -1,0 +1,6 @@
+#
+# default settings
+#
+# $Id$
+#
+#
