@@ -1,0 +1,6 @@
+#
+# default SACS mappings
+#
+# $Id$
+#
+#
