@@ -76,7 +76,7 @@ class ZMController extends ZMObject {
             ZMRuntime::getDatabase()->beginTransaction();
         }
 
-        ZMEvents::instance()->fireEvent($this, Events::CONTROLLER_PROCESS_START, array('request' => $request, 'controller' => $this));
+        ZMEvents::instance()->fireEvent($this, ZMMVCConstants::CONTROLLER_PROCESS_START, array('request' => $request, 'controller' => $this));
 
         // method independant (pre-)processing
         $this->preProcess($request);
@@ -139,7 +139,7 @@ class ZMController extends ZMObject {
             $this->view_ = $view;
         }
 
-        ZMEvents::instance()->fireEvent($this, Events::CONTROLLER_PROCESS_END, array('request' => $request, 'controller' => $this, 'view' => $this->view_));
+        ZMEvents::instance()->fireEvent($this, ZMMVCConstants::CONTROLLER_PROCESS_END, array('request' => $request, 'controller' => $this, 'view' => $this->view_));
 
         if ($enableTransactions) {
             ZMRuntime::getDatabase()->commit();
