@@ -31,35 +31,35 @@
         $all_obsolete_files[] = DIR_FS_ADMIN . "zmFeatures.php";
         $all_obsolete_files[] = DIR_FS_ADMIN . "zmCleanup.php";
         $all_obsolete_files[] = DIR_FS_ADMIN . "includes/boxes/extra_boxes/zmFeatures_catalog_dhtml.php";
-        $all_obsolete_files[] = ZM_BASE_DIR . "themes/default/controller/DefaultController.php";
-        $all_obsolete_files[] = ZM_BASE_DIR . "themes/default/controller";
-        $all_obsolete_files[] = ZM_BASE_DIR . "themes/extra/categories.php";
-        $all_obsolete_files[] = ZM_BASE_DIR . "core/phpBB.php";
-        $all_obsolete_files[] = ZM_BASE_DIR . "themes/default/content/views/popup/popup_cvv_help.php";
-        $all_obsolete_files[] = ZM_BASE_DIR . "themes/default/content/views/popup/popup_search_help.php";
-        $all_obsolete_files[] = ZM_BASE_DIR . "themes/lang/english/other.php";
-        $all_obsolete_files[] = ZM_BASE_DIR . "admin_init.php";
+        $all_obsolete_files[] = ZM_BASE_PATH . "themes/default/controller/DefaultController.php";
+        $all_obsolete_files[] = ZM_BASE_PATH . "themes/default/controller";
+        $all_obsolete_files[] = ZM_BASE_PATH . "themes/extra/categories.php";
+        $all_obsolete_files[] = ZM_BASE_PATH . "core/phpBB.php";
+        $all_obsolete_files[] = ZM_BASE_PATH . "themes/default/content/views/popup/popup_cvv_help.php";
+        $all_obsolete_files[] = ZM_BASE_PATH . "themes/default/content/views/popup/popup_search_help.php";
+        $all_obsolete_files[] = ZM_BASE_PATH . "themes/lang/english/other.php";
+        $all_obsolete_files[] = ZM_BASE_PATH . "admin_init.php";
         // Ultimate SEO
-        $all_obsolete_files[] = ZM_BASE_DIR . "core/ext/reset_seo_cache.php";
-        $all_obsolete_files[] = ZM_BASE_DIR . "core/ext/seo.install.php";
-        $all_obsolete_files[] = ZM_BASE_DIR . "core/ext/seo.url.php";
-        $all_obsolete_files[] = ZM_BASE_DIR . "core/ext/seo.php";
-        $all_obsolete_files[] = ZM_BASE_DIR . "core/admin/installation/patches/file/ZMUltimateSeoSupportPatch.php";
+        $all_obsolete_files[] = ZM_BASE_PATH . "core/ext/reset_seo_cache.php";
+        $all_obsolete_files[] = ZM_BASE_PATH . "core/ext/seo.install.php";
+        $all_obsolete_files[] = ZM_BASE_PATH . "core/ext/seo.url.php";
+        $all_obsolete_files[] = ZM_BASE_PATH . "core/ext/seo.php";
+        $all_obsolete_files[] = ZM_BASE_PATH . "core/admin/installation/patches/file/ZMUltimateSeoSupportPatch.php";
         $all_obsolete_files[] = DIR_FS_CATALOG . "includes/functions/extra_functions/zenmagick_ultimate_seo.php";
         $all_obsolete_files[] = DIR_FS_CATALOG . "admin/includes/functions/extra_functions/seo.php";
         //
-        $all_obsolete_files[] = ZM_BASE_DIR . "themes/default/extra/url_mapping.php";
-        $all_obsolete_files[] = ZM_BASE_DIR . "core/rp/uip/controller/ZMCheckoutAnonymousController.php";
-        $all_obsolete_files[] = ZM_BASE_DIR . "themes/demo/controller/AjaxCountryController.php";
-        $all_obsolete_files[] = ZM_BASE_DIR . "themes/demo/content/yui";
-        $all_obsolete_files[] = ZM_BASE_DIR . "themes/demo/content/prototype15.js";
-        $all_obsolete_files[] = ZM_BASE_DIR . "core/admin/installation/patches/file/ZMDynamicAdminMenuPatch.php";
-        $all_obsolete_files[] = ZM_BASE_DIR . "zenmagick/themes/default/content/category.js";
-        $all_obsolete_files[] = ZM_BASE_DIR . "core/misc/phpBB.php";
-        $all_obsolete_files[] = ZM_BASE_DIR . "core/validation/rules/custom/ZMNickNameRule.php";
-        $all_obsolete_files[] = ZM_BASE_DIR . "core/bootstrap.php";
-        $all_obsolete_files[] = ZM_BASE_DIR . "core/cache/defaults.php";
-        $all_obsolete_files[] = ZM_BASE_DIR . "core/cache/ZMPageCache.php";
+        $all_obsolete_files[] = ZM_BASE_PATH . "themes/default/extra/url_mapping.php";
+        $all_obsolete_files[] = ZM_BASE_PATH . "core/rp/uip/controller/ZMCheckoutAnonymousController.php";
+        $all_obsolete_files[] = ZM_BASE_PATH . "themes/demo/controller/AjaxCountryController.php";
+        $all_obsolete_files[] = ZM_BASE_PATH . "themes/demo/content/yui";
+        $all_obsolete_files[] = ZM_BASE_PATH . "themes/demo/content/prototype15.js";
+        $all_obsolete_files[] = ZM_BASE_PATH . "core/admin/installation/patches/file/ZMDynamicAdminMenuPatch.php";
+        $all_obsolete_files[] = ZM_BASE_PATH . "zenmagick/themes/default/content/category.js";
+        $all_obsolete_files[] = ZM_BASE_PATH . "core/misc/phpBB.php";
+        $all_obsolete_files[] = ZM_BASE_PATH . "core/validation/rules/custom/ZMNickNameRule.php";
+        $all_obsolete_files[] = ZM_BASE_PATH . "core/bootstrap.php";
+        $all_obsolete_files[] = ZM_BASE_PATH . "core/cache/defaults.php";
+        $all_obsolete_files[] = ZM_BASE_PATH . "core/cache/ZMPageCache.php";
         //
         $all_obsolete_files[] = DIR_FS_ADMIN . "zmCacheManager.php";
         //
